# spacegame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile  data
assets/sprites/: background.ase  barf.ase  bullet.ase  cat00.ase  cat01.ase  cat02.ase  choose_bg.ase  controls_frame.ase  cursor.ase  explosion.ase  planet.ase  planetv2.ase  textbox.ase
src/: action.c  action.h  controller.h  debug.c  debug.h  entity.c  entity.h  factory.c  factory.h  game.c  game.h  input.c  input.h  main.c  scene.c  scene.h  sound.c  sound.h  window.c  window.h
src/actions/: animate.c  animate.h  autodie.c  autodie.h  collide.c  collide.h  gravity.c  gravity.h  movefwd.c  movefwd.h  shootit.c  shootit.h  turndir.c  turndir.h
src/components/: direction.c  drawpos.c  drawpos.h  drawquad.c  drawquad.h  physics.c  physics.h  sprite.c  sprite.h  textbox.c  textbox.h  timer.c  timer.h
src/config/: conf.c  conf.h  font.c  font.h  glob.c  glob.h  map.c  map.h  path.c  path.h  time.c  time.h
src/controllers/: chooseyourcat.c  chooseyourcat.h  gameplay.c  gameplay.h  pressstart.c  pressstart.h  space.c  space.h
src/entities/: bullet.h  picture.c  picture.h  planet.c  planet.h  ship.c  ship.h
src/scenes/: chooseyourcat.c  chooseyourcat.h  gameplay.c  gameplay.h  pressstart.c  pressstart.h
src/utility/: bool.h  direction.c  direction.h  entity.c  entity.h  macros.h  messages.c  messages.h  queue.c  queue.h  string.c  string.h  thing.c  thing.h  vector.c  vector.h
